fix(app): svg img sizes on Firefox

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -201,7 +201,7 @@
 
   img,
   svg {
-    @apply w-full h-auto object-cover;
+    @apply max-w-full h-auto object-cover;
   }
 
   em {
